# serializer version: 1
# name: TestLoginView.test_empty_login_hint
  '''
  <main class="s-main" id="main" role="main">
      <section class="s-section pt-lg-3">
          <div class="container">
              <div class="row g-0 bg-white">
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <div class="container container-messages">
                          </div>
                          <h1 class="h2">
                              Connexion
                          </h1>
                          <form class="js-prevent-multiple-submit" method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <fieldset>
                                  <div class="row">
                                      <div class="col-12">
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_email">
                                                  Adresse e-mail
                                              </label>
                                              <input autocomplete="email" class="form-control" id="id_email" maxlength="320" name="email" placeholder="nom@domaine.fr" required="" type="email"/>
                                          </div>
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_password">
                                                  Mot de passe
                                              </label>
                                              <div class="input-group">
                                                  <input autocomplete="current-password" class="form-control" id="id_password" name="password" placeholder="**********" required="" type="password"/>
                                                  <span class="input-group-text p-0">
                                                      <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
                                                          <i class="ri-eye-line">
                                                          </i>
                                                          <span>
                                                              Afficher
                                                          </span>
                                                      </button>
                                                  </span>
                                              </div>
                                          </div>
                                      </div>
                                  </div>
                              </fieldset>
                              <div>
                                  <button class="btn btn-block btn-primary">
                                      Connexion
                                  </button>
                              </div>
                          </form>
                      </div>
                  </div>
                  <div class="d-none d-lg-flex col-lg-6 p-lg-6 justify-content-center align-items-center bg-light">
                      <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-ic.svg"/>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: TestLoginView.test_login[login_form]
  '''
  <main class="s-main" id="main" role="main">
      <section class="s-section pt-lg-3">
          <div class="container">
              <div class="row g-0 bg-white">
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <div class="container container-messages">
                          </div>
                          <h1 class="h2">
                              Connexion
                          </h1>
                          <form class="js-prevent-multiple-submit" method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <fieldset>
                                  <div class="row">
                                      <div class="col-12">
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_email">
                                                  Adresse e-mail
                                              </label>
                                              <input autocomplete="email" class="form-control" id="id_email" maxlength="320" name="email" placeholder="nom@domaine.fr" required="" type="email"/>
                                          </div>
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_password">
                                                  Mot de passe
                                              </label>
                                              <div class="input-group">
                                                  <input autocomplete="current-password" class="form-control" id="id_password" name="password" placeholder="**********" required="" type="password"/>
                                                  <span class="input-group-text p-0">
                                                      <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
                                                          <i class="ri-eye-line">
                                                          </i>
                                                          <span>
                                                              Afficher
                                                          </span>
                                                      </button>
                                                  </span>
                                              </div>
                                          </div>
                                      </div>
                                  </div>
                              </fieldset>
                              <div>
                                  <button class="btn btn-block btn-primary">
                                      Connexion
                                  </button>
                              </div>
                          </form>
                      </div>
                  </div>
                  <div class="d-none d-lg-flex col-lg-6 p-lg-6 justify-content-center align-items-center bg-light">
                      <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-ic.svg"/>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: TestLoginView.test_login[verify_otp]
  '''
  <main class="s-main" id="main" role="main">
      <section class="s-section pt-lg-3">
          <div class="container">
              <div class="row g-0 bg-white">
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <div class="container container-messages">
                          </div>
                          <form class="js-prevent-multiple-submit" method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <fieldset>
                                  <p class="h4">
                                      Saisir le code OTP
                                  </p>
                                  <div class="mb-3 form-group-required">
                                      <label class="visually-hidden" for="id_otp_token">
                                          Otp token
                                      </label>
                                      <input autocomplete="one-time-code" class="form-control" id="id_otp_token" max_length="6" name="otp_token" placeholder="Otp token" required="" type="text"/>
                                  </div>
                              </fieldset>
                              <div>
                                  <button class="btn btn-block btn-primary">
                                      Valider
                                  </button>
                              </div>
                          </form>
                      </div>
                  </div>
                  <div class="d-none d-lg-flex col-lg-6 p-lg-6 justify-content-center align-items-center bg-light">
                      <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-ic.svg"/>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: TestLoginView.test_login_hint
  '''
  <main class="s-main" id="main" role="main">
      <section class="s-section pt-lg-3">
          <div class="container">
              <div class="row g-0 bg-white">
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <div class="container container-messages">
                          </div>
                          <h1 class="h2">
                              Connexion
                          </h1>
                          <form class="js-prevent-multiple-submit" method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <fieldset>
                                  <div class="row">
                                      <div class="col-12">
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_email">
                                                  Adresse e-mail
                                              </label>
                                              <input autocomplete="email" class="form-control" disabled="" id="id_email" maxlength="320" name="email" placeholder="nom@domaine.fr" required="" type="email" value="me@mailinator.com"/>
                                          </div>
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_password">
                                                  Mot de passe
                                              </label>
                                              <div class="input-group">
                                                  <input autocomplete="current-password" class="form-control" id="id_password" name="password" placeholder="**********" required="" type="password"/>
                                                  <span class="input-group-text p-0">
                                                      <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
                                                          <i class="ri-eye-line">
                                                          </i>
                                                          <span>
                                                              Afficher
                                                          </span>
                                                      </button>
                                                  </span>
                                              </div>
                                          </div>
                                      </div>
                                  </div>
                              </fieldset>
                              <div>
                                  <button class="btn btn-block btn-primary">
                                      Connexion
                                  </button>
                              </div>
                          </form>
                      </div>
                  </div>
                  <div class="d-none d-lg-flex col-lg-6 p-lg-6 justify-content-center align-items-center bg-light">
                      <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-ic.svg"/>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: TestOTP.test_delete_devices[with_device]
  '''
  <section class="s-section pt-lg-3">
                  <div class="container">
                      <div class="row g-0 bg-white">
                          
                              
      <div class="col-12 col-lg-6 bg-lg-white">
          <div class="bg-white p-3 py-lg-7 px-lg-8">
              <h1>Mon compte</h1>
              <ul class="nav nav-tabs flex-column">
                  <li class="nav-item">
                      <a class="nav-link" href="/accounts/home/">Accueil</a>
                  </li>
                  <li class="nav-item">
                      <a class="nav-link" href="/accounts/change-password/">Mot de passe</a>
                  </li>
                  <li class="nav-item">
                      <a class="nav-link" href="/accounts/otp/devices">2FA</a>
                  </li>
                  <li class="nav-item">
                      <a class="nav-link" href="/admin/">Admin</a>
                  </li>
                  <li class="nav-item">
                      <form action="/accounts/logout/" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button class="nav-link" type="submit">Déconnexion</button>
                      </form>
                  </li>
              </ul>
          </div>
      </div>
  
                              
      <div class="col-12 col-lg-6 bg-lg-white">
          <div class="bg-white p-3 py-lg-7 px-lg-8">
              <h1>
                  Configuration 2FA
              </h1>
              
                  
  
  
              
  
              
      <h2>Mes appareils</h2>
      <form method="post">
          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
          
              <p>Voici la liste de vos appareils configurés :</p>
              <table class="table table-sm">
                  <caption class="visually-hidden">Liste de vos appareils configurés</caption>
                  <thead>
                      <tr>
                          <th scope="col"></th>
                          <th scope="col">Nom</th>
                          <th scope="col">Créé le</th>
                          <th scope="col">Dernière utilisation</th>
                          <th scope="col">Supprimer</th>
                      </tr>
                  </thead>
                  <tbody>
                      
                          <tr>
                              <td>
                                  
                                      <i class="ri-verified-badge-fill text-success" data-bs-placement="top" data-bs-title="Vous avez utilisé cet appareil pour vous connecter." data-bs-toggle="tooltip"></i>
                                  
                              </td>
                              <td>bitwarden</td>
                              <td>11 mars 2025 06:18</td>
                              <td>
                                  <i class="text-disabled">jamais</i>
                              </td>
                              <td>
  
                                  <button aria-label="Supprimer l’appareil bitwarden" class="btn btn-sm btn-link disabled" data-bs-placement="top" data-bs-target="#delete_[PK of device_1]_modal" data-bs-title="Impossible de supprimer l’appareil que vous avez utilisé pour vous connecter." data-bs-toggle="tooltip" type="button">
                                      <i aria-hidden="true" class="ri-delete-bin-line fw-normal"></i>
                                  </button>
                              </td>
                          </tr>
                      
                          <tr>
                              <td>
                                  
                              </td>
                              <td>authenticator</td>
                              <td>11 mars 2025 06:19</td>
                              <td>
                                  <i class="text-disabled">jamais</i>
                              </td>
                              <td>
  
                                  <button aria-label="Supprimer l’appareil authenticator" class="btn btn-sm btn-link text-danger" data-bs-target="#delete_[PK of device_2]_modal" data-bs-toggle="modal" type="button">
                                      <i aria-hidden="true" class="ri-delete-bin-line fw-normal"></i>
                                  </button>
                              </td>
                          </tr>
                      
                  </tbody>
              </table>
          
          <button class="btn btn-block btn-primary" name="action" type="submit" value="new">
              Configurer un
              nouvel
              appareil
          </button>
  
          
          
              
          
              
                  <div aria-hidden="true" class="modal fade" id="delete_[PK of device_2]_modal" tabindex="-1">
                      <div class="modal-dialog modal-dialog-centered">
                          <div class="modal-content">
                              <div class="modal-header">
                                  <h3 class="modal-title">Êtes-vous sûr de vouloir supprimer l'appareil authenticator ?</h3>
                              </div>
                              <div class="modal-body">
                                  <p>Cette action est irréversible.</p>
                              </div>
                              <div class="modal-footer">
                                  <button class="btn btn-sm btn-outline-primary" data-bs-dismiss="modal" type="button">Retour</button>
                                  <button aria-label="Supprimer l’appareil authenticator" class="btn btn-sm btn-danger" name="delete-device" value="[PK of device_2]">
                                      Confirmer la suppression
                                  </button>
                              </div>
                          </div>
                      </div>
                  </div>
              
          
      </form>
  
          </div>
      </div>
  
                          
                      </div>
                  </div>
              </section>
  '''
# ---
# name: TestOTP.test_devices
  '''
  <main class="s-main" id="main" role="main">
      <section class="s-section pt-lg-3">
          <div class="container">
              <div class="row g-0 bg-white">
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <h1>
                              Mon compte
                          </h1>
                          <ul class="nav nav-tabs flex-column">
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/home/">
                                      Accueil
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/change-password/">
                                      Mot de passe
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/otp/devices">
                                      2FA
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/admin/">
                                      Admin
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <form action="/accounts/logout/" method="post">
                                      <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                                      <button class="nav-link" type="submit">
                                          Déconnexion
                                      </button>
                                  </form>
                              </li>
                          </ul>
                      </div>
                  </div>
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <h1>
                              Configuration 2FA
                          </h1>
                          <h2>
                              Mes appareils
                          </h2>
                          <form method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <p>
                                  Voici la liste de vos appareils configurés :
                              </p>
                              <table class="table table-sm">
                                  <caption class="visually-hidden">
                                      Liste de vos appareils configurés
                                  </caption>
                                  <thead>
                                      <tr>
                                          <th scope="col">
                                          </th>
                                          <th scope="col">
                                              Nom
                                          </th>
                                          <th scope="col">
                                              Créé le
                                          </th>
                                          <th scope="col">
                                              Dernière utilisation
                                          </th>
                                          <th scope="col">
                                              Supprimer
                                          </th>
                                      </tr>
                                  </thead>
                                  <tbody>
                                      <tr>
                                          <td>
                                              <i class="ri-verified-badge-fill text-success" data-bs-placement="top" data-bs-title="Vous avez utilisé cet appareil pour vous connecter." data-bs-toggle="tooltip">
                                              </i>
                                          </td>
                                          <td>
                                          </td>
                                          <td>
                                              11 mars 2025 06:18
                                          </td>
                                          <td>
                                              <i class="text-disabled">
                                                  jamais
                                              </i>
                                          </td>
                                          <td>
                                              <button aria-label="Supprimer l’appareil " class="btn btn-sm btn-link disabled" data-bs-placement="top" data-bs-target="#delete_[PK of device]_modal" data-bs-title="Impossible de supprimer l’appareil que vous avez utilisé pour vous connecter." data-bs-toggle="tooltip" type="button">
                                                  <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                                  </i>
                                              </button>
                                          </td>
                                      </tr>
                                  </tbody>
                              </table>
                              <button class="btn btn-block btn-primary" name="action" type="submit" value="new">
                                  Configurer un
              nouvel
              appareil
                              </button>
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: TestOTP.test_devices[no_device]
  '''
  <main class="s-main" id="main" role="main">
      <section class="s-section pt-lg-3">
          <div class="container">
              <div class="row g-0 bg-white">
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <h1>
                              Mon compte
                          </h1>
                          <ul class="nav nav-tabs flex-column">
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/home/">
                                      Accueil
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/change-password/">
                                      Mot de passe
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/otp/devices">
                                      2FA
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/admin/">
                                      Admin
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <h1>
                              Configuration 2FA
                          </h1>
                          <h2>
                              Mes appareils
                          </h2>
                          <form method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <p>
                                  Vous n'avez pas configuré d'appareil OTP.
                              </p>
                              <button class="btn btn-block btn-primary" name="action" type="submit" value="new">
                                  Configurer un
              
              appareil
                              </button>
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: TestOTP.test_devices[with_device]
  '''
  <main class="s-main" id="main" role="main">
      <section class="s-section pt-lg-3">
          <div class="container">
              <div class="row g-0 bg-white">
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <h1>
                              Mon compte
                          </h1>
                          <ul class="nav nav-tabs flex-column">
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/home/">
                                      Accueil
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/change-password/">
                                      Mot de passe
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/otp/devices">
                                      2FA
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/admin/">
                                      Admin
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <h1>
                              Configuration 2FA
                          </h1>
                          <h2>
                              Mes appareils
                          </h2>
                          <form method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <p>
                                  Voici la liste de vos appareils configurés :
                              </p>
                              <table class="table table-sm">
                                  <caption class="visually-hidden">
                                      Liste de vos appareils configurés
                                  </caption>
                                  <thead>
                                      <tr>
                                          <th scope="col">
                                          </th>
                                          <th scope="col">
                                              Nom
                                          </th>
                                          <th scope="col">
                                              Créé le
                                          </th>
                                          <th scope="col">
                                              Dernière utilisation
                                          </th>
                                          <th scope="col">
                                              Supprimer
                                          </th>
                                      </tr>
                                  </thead>
                                  <tbody>
                                      <tr>
                                          <td>
                                              <i class="ri-verified-badge-fill text-success" data-bs-placement="top" data-bs-title="Vous avez utilisé cet appareil pour vous connecter." data-bs-toggle="tooltip">
                                              </i>
                                          </td>
                                          <td>
                                              Mon appareil
                                          </td>
                                          <td>
                                              11 mars 2025 06:18
                                          </td>
                                          <td>
                                              <i class="text-disabled">
                                                  jamais
                                              </i>
                                          </td>
                                          <td>
                                              <button aria-label="Supprimer l’appareil Mon appareil" class="btn btn-sm btn-link disabled" data-bs-placement="top" data-bs-target="#delete_[PK of device]_modal" data-bs-title="Impossible de supprimer l’appareil que vous avez utilisé pour vous connecter." data-bs-toggle="tooltip" type="button">
                                                  <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                                  </i>
                                              </button>
                                          </td>
                                      </tr>
                                  </tbody>
                              </table>
                              <button class="btn btn-block btn-primary" name="action" type="submit" value="new">
                                  Configurer un
              nouvel
              appareil
                              </button>
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: TestPasswordChangeView.test_change_password
  '''
  <main class="s-main" id="main" role="main">
      <section class="s-section pt-lg-3">
          <div class="container">
              <div class="row g-0 bg-white">
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <h1>
                              Mon compte
                          </h1>
                          <ul class="nav nav-tabs flex-column">
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/home/">
                                      Accueil
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link active" href="/accounts/change-password/">
                                      Mot de passe
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/accounts/otp/devices">
                                      2FA
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="/admin/">
                                      Admin
                                  </a>
                              </li>
                              <li class="nav-item">
                                  <form action="/accounts/logout/" method="post">
                                      <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                                      <button class="nav-link" type="submit">
                                          Déconnexion
                                      </button>
                                  </form>
                              </li>
                          </ul>
                      </div>
                  </div>
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <h1>
                              Changer mon mot de passe
                          </h1>
                          <form class="js-prevent-multiple-submit" method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <fieldset>
                                  <div class="row">
                                      <div class="col-12">
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_old_password">
                                                  Mot de passe actuel
                                              </label>
                                              <div class="input-group">
                                                  <input autocomplete="current-password" autofocus="" class="form-control" id="id_old_password" name="old_password" placeholder="**********" required="" type="password"/>
                                                  <span class="input-group-text p-0">
                                                      <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
                                                          <i class="ri-eye-line">
                                                          </i>
                                                          <span>
                                                              Afficher
                                                          </span>
                                                      </button>
                                                  </span>
                                              </div>
                                          </div>
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_new_password1">
                                                  Nouveau mot de passe
                                              </label>
                                              <div class="input-group">
                                                  <input aria-describedby="id_new_password1_helptext" autocomplete="new-password" class="form-control password-with-instructions" id="id_new_password1" name="new_password1" placeholder="**********" required="" type="password"/>
                                                  <span class="input-group-text p-0">
                                                      <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
                                                          <i class="ri-eye-line">
                                                          </i>
                                                          <span>
                                                              Afficher
                                                          </span>
                                                      </button>
                                                  </span>
                                              </div>
                                          </div>
                                          <small class="form-text text-muted">
                                              <ul class="list-unstyled">
                                                  <li>
                                                      <i class="ri-close-circle-line text-warning" id="pw-length">
                                                      </i>
                                                      12 caractères minimum
                                                  </li>
                                                  <li>
                                                      <i class="ri-close-circle-line text-warning" id="pw-digit">
                                                      </i>
                                                      1 chiffre
                                                  </li>
                                                  <li>
                                                      <i class="ri-close-circle-line text-warning" id="pw-lower">
                                                      </i>
                                                      1 minuscule
                                                  </li>
                                                  <li>
                                                      <i class="ri-close-circle-line text-warning" id="pw-upper">
                                                      </i>
                                                      1 majuscule
                                                  </li>
                                                  <li>
                                                      <i class="ri-close-circle-line text-warning" id="pw-special-char">
                                                      </i>
                                                      1 caractère spécial (ex: & é @ -)
                                                  </li>
                                              </ul>
                                          </small>
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_new_password2">
                                                  Confirmation du nouveau mot de passe
                                              </label>
                                              <div class="input-group">
                                                  <input aria-describedby="id_new_password2_helptext" autocomplete="new-password" class="form-control" id="id_new_password2" name="new_password2" placeholder="**********" required="" type="password"/>
                                                  <span class="input-group-text p-0">
                                                      <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
                                                          <i class="ri-eye-line">
                                                          </i>
                                                          <span>
                                                              Afficher
                                                          </span>
                                                      </button>
                                                  </span>
                                              </div>
                                          </div>
                                      </div>
                                  </div>
                              </fieldset>
                              <div>
                                  <button class="btn btn-block btn-primary">
                                      Modifier mon mot de passe
                                  </button>
                              </div>
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
